--- a/bin/makefile
+++ b/bin/makefile
@@ -4,7 +4,7 @@ SRC_DIR = ../src/
 INC_DIR= ../include
 CPPFLAGS= -Wall -g -std=c++11 -I$(INC_DIR) 
 LDFLAGS=
-OBJS = settings.o main.o
+OBJS = settings.o main.o particle.o swarm.o
 
 &(PROG) : $(OBJS)
 	$(CC) -o $(PROG) $(OBJS) $(LDFLAGS)
@@ -17,6 +17,9 @@ particle.o :
 
 settings.o :
 	$(CC) $(CPPFLAGS) -c $(SRC_DIR)settings.cpp
+
+swarm.o :
+	$(CC) $(CPPFLAGS) -c $(SRC_DIR)swarm.cpp
 
 clean : 
 	rm -f core $(PROG) *.o
